# mdgfx

./: README.md
mdgfx_mapmod/: CMakeLists.txt  Makefile  pixelbeat_test.chr  pixelbeat_test.map
mdgfx_mapmod/inc/: tmaputils.hpp
mdgfx_mapmod/src/: main.cpp
mdgfx_tochr/: .clang-format  .gitignore  CMakeLists.txt  ring.chr
mdgfx_tochr/inc/: common.hpp  filesys.hpp  gfxdef.hpp  gfxutils.hpp  tileopt.hpp
mdgfx_tochr/src/: gfxutils.cpp  main.cpp  tileopt.cpp
